// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recent items should render base element normally 1`] = `
<body>
  <div>
    <div
      class="euiPopover euiPopover--anchorDownCenter"
    >
      <div
        class="euiPopover__anchor"
      >
        <span
          class="euiToolTipAnchor"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="View recents"
            class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall headerRecentItemsButton"
            data-test-subj="recentItemsSectionButton"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="recent"
            />
          </button>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`Recent items should show loading indicator if loading count > 0 1`] = `
<body>
  <div>
    <div
      class="euiPopover euiPopover--anchorDownCenter"
    >
      <div
        class="euiPopover__anchor"
      >
        <span
          class="euiToolTipAnchor"
        >
          <button
            aria-expanded="false"
            aria-haspopup="true"
            aria-label="View recents"
            class="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall headerRecentItemsButton headerRecentItemsButton--loadingIndicator"
            data-test-subj="recentItemsSectionButton"
            type="button"
          >
            <span
              class="euiButtonContent euiButtonEmpty__content"
            >
              <span
                class="euiButtonEmpty__text"
              >
                <span
                  aria-hidden="false"
                  aria-label="Loading content"
                  class="euiLoadingSpinner euiLoadingSpinner--medium"
                  data-test-subj="globalLoadingIndicator"
                />
              </span>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</body>
`;
